# yuri-draft-league

./: .gitignore  CLAUDE.md  NOTES-mobile-draftboard.md  app.py  fetch_abilities.py  fetch_pokedex.py  fetch_pokemon_db.py  import_abilities.py  import_new_megas.py  init_db.py  league.db  migrate_settings.py  populate_stats.py  populate_types.py  pyproject.toml  replay_utils.py  requirements.txt  update_mega_slots.py  update_megas.py  update_moves.py  update_types.py  update_uber_slots.py
scripts/: check_moves_db.py  fix_missing_moves.py  import_excel.py  import_season.py  migrate_abilities_moves_jun2026.py  migrate_mega_moves.py  parse_replay.py  update_moves.py
static/: dex-mini.json  meta-styles.css  mobile-draftboard.js  mobile.css  recap-styles.css
templates/: _mobile_tabbar.html  base.html  battle_prep.html  damage_calc.html  draft.html  draft_live.html  draft_prep.html  draftboard.html  h2h.html  history.html  home.html  index.html  login.html  match_recap.html  mvp.html  my_matches.html  pickems.html  playoffs.html  pokedex.html  replays.html  rules.html  schedule.html  season_archive.html  seasons.html  stats.html  team.html  teams.html  transactions.html
tests/: conftest.py  test_backups.py  test_board_templates.py  test_board_templates_routes.py  test_clear_result.py  test_commentary.py  test_discord_recap.py  test_draft_mode_policy.py  test_draft_structure.py  test_harness.py  test_mechanic_config.py  test_pokepaste.py  test_recap_highlights.py  test_replay_parse.py  test_settings_page.py  test_tier_definitions.py  test_type_chart.py  test_uber_combos.py  (+2 more)
(+43 files in other folders)
